--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "biscuit-city-farm",
+  "homepage": "https://biscuitcityfarm.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,8 +16,10 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
+    "@types/react-router-dom": "5.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "6.22.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -27,7 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn run build",
-  "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
